[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CRAM"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
description = "A Basic Reader and Writer for CRAM format"
license = { text = "MIT" }
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = []

[[project.authors]]
name = "Ram Prakash Ayyam Perumal"
email = "nuvi@umich.edu"

[project.urls]
Homepage = "https://github.com/imnuvi/CRAM"
"Bug Tracker" = "https://github.com/imnuvi/CRAM"

[tool.setuptools]
packages = ["CRAM"]
